--- a/directory.html
+++ b/directory.html
@@ -191,7 +191,7 @@
           <p>YEAR</p>
         </div>
 
-        <a href="https://www.discogs.com/Nikolai-Kapustin-Marc-Andr%C3%A9-Hamelin-Piano-Music/release/5198277https://www.discogs.com/Nikolai-Kapustin-Marc-Andr%C3%A9-Hamelin-Piano-Music/release/5198277" target="blank"><div class="listSplit">
+        <a href="https://www.discogs.com/Nikolai-Kapustin-Marc-Andr%C3%A9-Hamelin-Piano-Music/release/5198277" target="blank"><div class="listSplit">
           <p>Nikolai Kapustin - Eight Concert Etudes op. 40</p>
           <p id="info">PIANO, CLASSICAL, JAZZ</p>
           <p> 1984 </p>
