--- a/gallery.html
+++ b/gallery.html
@@ -49,7 +49,7 @@
 
           <a href="bio.html"><li>Bio</li></a>
           <a href="cv.html"><li>CV</li></a>
-          
+
           <a href="directory.html"><li>Directory</li></a>
           <br>
           <li id="external"><a href="https://instagram.com/www_wdwrd" target="blank" rel="noreferrer noopener">ig</a></li>
@@ -76,7 +76,7 @@
         <p></p>
         <p></p>
 
-        <a href="javascript:void(0);" onclick="window.open('project/objects on parade.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="image/water-tower/tower 8.gif"></img></a>
+        <a href="javascript:void(0);" onclick="window.open('project/objects on parade.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="image/water-tower/Tower 8.gif"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/logo.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="image/logo/twins 1.png"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="image/comfort-clothing/10.jpg" id="grey"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/station searching.png"></img></a>
