--- a/project/objects on parade.html
+++ b/project/objects on parade.html
@@ -14,7 +14,7 @@
       <p> Ongoing collaboration with <a href="https://pluslorem.wiki" target="blank" rel="noreferrer noopener">Osa Uveine</a>.</p>
       <div class="twosplit">
         <div>
-          <a href="javascript:void(0);" onclick="window.open('watertower.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="../image/water-tower/tower 8.gif" width="90px"></img></a>
+          <a href="javascript:void(0);" onclick="window.open('Watertower.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="../image/water-tower/tower 8.gif" width="90px"></img></a>
           <p> Watertowers </p>
 
         </div>
