--- a/objects.html
+++ b/objects.html
@@ -6,6 +6,11 @@
   <link rel="stylesheet" href="stylesheet.css">
   <title>Caleb Woodward</title>
 
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+
 </head>
 
 
@@ -49,7 +54,7 @@
 
           <a href="bio.html"><li>Bio</li></a>
           <a href="cv.html"><li>CV</li></a>
-          
+
           <a href="directory.html"><li>Directory</li></a>
           <br>
           <li id="external"><a href="https://instagram.com/www_wdwrd" target="blank" rel="noreferrer noopener">ig</a></li>
