--- a/project/comfort-clothing.html
+++ b/project/comfort-clothing.html
@@ -31,12 +31,12 @@
     <p></p>
     <img src="../image/comfort-clothing/06.jpg" width="560px"></img>
     <p></p>
-    <img src="../image/comfort-clothing/07.jpg" width="560px"></img>
+    <img src="../image/comfort-clothing/07.JPG" width="560px"></img>
     <p></p>
     <img src="../image/comfort-clothing/08.jpg" width="560px"></img>
     <p></p>
     <img src="../image/comfort-clothing/10.jpg" width="560px"></img>
-    
+
     <p><br></p>
 
     </div>
