--- a/directory.html
+++ b/directory.html
@@ -120,7 +120,7 @@
             <p> DESIGNER </p>
           </div></a>
 
-          <a href="http://swimmingdesign/" target="blank"><div class="listSplit">
+          <a href="http://swimmingdesign.com/" target="blank"><div class="listSplit">
             <p>swimmingdesign.com</p>
             <p id="info"> TOMOHIRO OKAZAKI (jp)</p>
             <p> DESIGNER </p>
