--- a/memo.html
+++ b/memo.html
@@ -41,7 +41,7 @@
       <div class="links">
         <br>
         <ul style="list-style-type:none">
-          <a href="index.html"><li>List :</li></a>
+          <a href="index.html"><li>List</li></a>
           <a href="gallery.html"><li>Gallery</li></a>
           <br>
           <ul style="list-style-type:none">
@@ -50,12 +50,13 @@
             <a href="graphics.html"><li>Graphics</li></a>
             <a href="garments.html"><li>Garments</li></a>
             <a href="others.html"><li>Others</li></a>
+
           </ul>
           <br>
 
           <a href="bio.html"><li>Bio</li></a>
           <a href="cv.html"><li>CV</li></a>
-          <a href="memo.html"><li>Memo</li></a>
+          <a href="memo.html"><li>Memo :</li></a>
 
           <a href="directory.html"><li>Directory</li></a>
           <br>
