--- a/memo.html
+++ b/memo.html
@@ -76,101 +76,21 @@
 
       <div id="theList">
         <section>
-          <p> OBJECTS</p>
+          <p> Memo</p>
 
           <div class="listSplit">
-            <p>TITLE</p>
-            <p></p>
-            <p>YEAR</p>
-          </div>
-          <a href="javascript:void(0);"><div class="listSplit">
-            <p > Window Radiometer </p>
-            <p id="wip"></p>
-            <p> 2021 </p>
-          </div></a>
-          <a href="javascript:void(0);"><div class="listSplit">
-            <p > Dog's Window </p>
-            <p id="wip"></p>
-            <p> 2021 </p>
-          </div></a>
-          <a href="javascript:void(0);"><div class="listSplit">
-            <p> Window Clock </p>
-            <p id="wip"></p>
-            <p> 2020 </p>
-          </div></a>
-          <a href="javascript:void(0);"><div class="listSplit">
-            <p > Build-it Note </p>
-            <p id="wip"></p>
-            <p> 2020 </p>
-          </div></a>
-        </section>
-        <br>
-        <br>
-        <section>
-          <p> GRAPHICS</p>
-
-          <div class="listSplit">
-            <p>TITLE</p>
-            <p></p>
-            <p>YEAR</p>
+            <p>Sensing Magnetism</p>
+            <p>Wednesday</p>
+            <p>2021 06 09 - 6:00 PM</p>
           </div>
 
-          <a href="javascript:void(0);" onclick="window.open('project/objects on parade.html','name','width=300,height=300')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Objects on Parade </p>
-            <p id="new"></p>
-            <p> 2020 - Ongoing</p>
-          </div></a>
-          <a href="javascript:void(0);" onclick="window.open('project/logo.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Logo </p>
-            <p id="new"></p>
-            <p> 2019 - Ongoing</p>
-          </div></a>
+          <br>
+          <p>(Adapted from a Diary Entry)</p>
 
+          <p>It's often a favourite moment of mine whenever a person takes out a compass in the midst of some paranormal event in some Horror or Sci-fi Movie I'm watching and sees it spinning and pointing erratically. Magnetism is a powerful physical force that constantly surrounds and permeates us, but it's not something we can directly sense. We know it's there, but it's invisable -- Imagine if you could only feel if it was hot or cool by use of a thermometer, or if you could only sense the presence of sound through a decibel meter. So, even though it's something so intangible, there's a really specific eerieness to seeing it being somehow meddled with, like the actual fabric of reality around you is being ruffled or passed through invisibly.</p>
+          <p>Of course, we're able to feel a physical sense of magnetism by holding a magnet itself, either feeling the strength of its pull towards and attachment to ferrous metals, or its slippery repellance from another magnet. I wonder what it would be like if we could directly feel the sensation of this pushing and pulling from magnets at all times -- it would probably feel like a "toughness" or "looseness" of the air around it, requiring extra strength to push through or otherwise throwing you off balance by suddenly slipping through it. It's nice to imagine playing with just a small magnet, feeling your fingers pushed and pulled by it.</p>
+          <p>Although Humans may not be able to sense it, Scientists have identified Magnetoreception in several organisms. Magnetotactic Bacteria align themselves according to the earth's magnetic field, a behaviour called Magnetotaxis, using nanometre-sized magnetite or iron sulfide enclosed within their cells, chains of which essentially acting as interior magnetic needles.
 
-        </section>
-        <br>
-        <br>
-        <section>
-          <p> GARMENTS</p>
-
-          <div class="listSplit">
-            <p>TITLE</p>
-            <p></p>
-            <p>YEAR</p>
-          </div>
-
-          <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Comfort-Seeking Clothing</p>
-            <p id="new"></p>
-            <p> 2021</p>
-          </div></a>
-
-
-        </section>
-        <br>
-        <br>
-        <section>
-          <p> OTHERS</p>
-
-          <div class="listSplit">
-            <p>TITLE</p>
-            <p></p>
-            <p>YEAR</p>
-          </div>
-
-          <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p>Station-Searching  (MV)</p>
-            <p id="new"></p>
-            <p> 2021</p>
-          </div></a>
-
-          <a href="javascript:void(0);" onclick="window.open('project/dogs-wall.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Dog's Wall</p>
-            <p id="new"></p>
-            <p> 2020</p>
-          </div></a>
-
-        </section>
 
 
       </div>
