--- a/directory.html
+++ b/directory.html
@@ -55,6 +55,7 @@
 
           <a href="bio.html"><li>Bio</li></a>
           <a href="cv.html"><li>CV</li></a>
+          <a href="memo.html"><li>Memo</li></a>
 
           <a href="directory.html"><li>Directory :</li></a>
           <br>
