--- a/project/station-searching.html
+++ b/project/station-searching.html
@@ -28,6 +28,20 @@
     <p></p>
     <img src="../image/station-searching/05.png" width=560px;></img>
     <p><br></p>
+    <p> Character </p>
+    <p> The short originally featured a character I designed, modelled, textured and rigged, animated using motion capture. I completed it to the stage of getting motion capture working however was unhappy with the quality of the result. In the end I was unable to use it in the finished short.</p>
+    <br>
+    <p></p>
+    <img src="../image/station-searching/09.png" width=560px;></img>
+    <p></p>
+    <img src="../image/station-searching/06.png" width=300px;></img>
+    <p></p>
+    <img src="../image/station-searching/07.png" width=300px;></img>
+    <p></p>
+    <img src="../image/station-searching/08.jpg" width=560px;></img>
+    <p><br></p>
+
+
 
     </div>
 
