remove new add updated

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
           <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p>Station-Searching  (MV)</p>
-            <p id="new"></p>
+            <p id="updated"></p>
             <p> 2021</p>
           </div></a>
 
