desktop little fix

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <p></p>
         <p  id="title">➝ Caleb Woodward</p>
 
+        <p id="info">Note: best viewed on desktop</p>
+
 
         <p></p>
 
