--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
             <p id="wip"></p>
             <p> 2020 </p>
           </div></a>
-          <a href="javascript:void(0);"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/buildit.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Build-it Note </p>
-            <p id="wip"></p>
+            <p id="new"></p>
             <p> 2020 </p>
           </div></a>
         </section>
