create window clock add eject to logo

--- a/project/logo.html
+++ b/project/logo.html
@@ -18,6 +18,13 @@
         <p> Duo</p>
         <p> 2019</p>
       </div>
+      <p></p>
+
+      <img src="../image/logo/eject net.png" width="100%"></img>
+      <div class="twosplit">
+        <p> Eject</p>
+        <p> 2020</p>
+      </div>
     </div>
 
 
