window clock images upload and page

--- a/project/windowclock.html
+++ b/project/windowclock.html
@@ -11,15 +11,20 @@
     </div>
 
     <div class="content">
-      <p>Emerging from the idea of "A Window of Time", A Decorative clock expressing the passing of time as the angle of the sun's light projected through a window. At night, the moon comes into view through the window. </p>
+      <p>Emerging from the idea of "A Window of Time", A Decorative clock expressing the passing of time as the angle of the sun's light projected through a window. At night, the moon comes into view through the window.</p>
 
 
 
     <br>
     <br>
-    <img src="../image/buildit/01.png" width="550px"></img>
+    <img src="../image/windowclock/clock lineup day.png" width="550px"></img>
     <p></p>
-    <img src="../image/buildit/02.png" width="550px"></img>
+    <img src="../image/windowclock/clock lineup night.png" width="550px"></img>
+    <p></p>
+    
+    <img src="../image/windowclock/clock night.png" width="550px"></img>
+    <p></p>
+    <img src="../image/windowclock/clock day.png" width="550px"></img>
     </div>
 
 
