linking window clock

--- a/objects.html
+++ b/objects.html
@@ -91,9 +91,9 @@
             <p id="wip"></p>
             <p> 2021 </p>
           </div></a>
-          <a href="javascript:void(0);"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Window Clock </p>
-            <p id="wip"></p>
+            <p id="new"></p>
             <p> 2020 </p>
           </div></a>
           <a href="javascript:void(0);" onclick="window.open('project/buildit.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
