window gallery fix

--- a/gallery.html
+++ b/gallery.html
@@ -82,7 +82,7 @@
         <p></p>
         <p></p>
 
-        <a href="javascript:void(0);" onclick="window.open('project/buildit.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/window.png"></img></a>
+        <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/window.png"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/buildit.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/buildit.png"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/objects on parade.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="image/water-tower/Tower 8.gif"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/logo.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="image/logo/twins 1.png"></img></a>
