--- a/project/logo.html
+++ b/project/logo.html
@@ -13,19 +13,91 @@
     <div class="content">
       <p>Selected Logo work, both Personal and for Clients.</p>
 
-      <img src="../image/logo/twins 1.png" width="100%"></img>
+      <img src="../image/logo/Logos layout-01.png" width="100%"></img>
       <div class="twosplit">
-        <p> Duo</p>
-        <p> 2019</p>
+        <p> Set of Nine Logos</p>
+        <p> 2021</p>
       </div>
       <p></p>
       <p></p>
 
-      <img src="../image/logo/eject net.png" width="100%"></img>
+      <img src="../image/logo/Logos layout-02.png" width="100%"></img>
       <div class="twosplit">
-        <p> Eject</p>
-        <p> 2020</p>
+        <p> Lunar Films</p>
+        <p> 2021</p>
       </div>
+
+      <p></p>
+      <p></p>
+
+      <img src="../image/logo/Logos layout-03.png" width="100%"></img>
+      <div class="twosplit">
+        <p> Subtle Clef</p>
+        <p> 2021</p>
+      </div>
+
+      <p></p>
+      <p></p>
+
+      <img src="../image/logo/Logos layout-04.png" width="100%"></img>
+      <div class="twosplit">
+        <p> ReelHouse</p>
+        <p> 2021</p>
+      </div>
+    
+
+    <p></p>
+    <p></p>
+
+    <img src="../image/logo/Logos layout-05.png" width="100%"></img>
+    <div class="twosplit">
+      <p> Pandora Parcel Service</p>
+      <p> 2021</p>
+    </div>
+
+    <p></p>
+    <p></p>
+
+    <img src="../image/logo/Logos layout-06.png" width="100%"></img>
+    <div class="twosplit">
+      <p> Elliot Oscar Haberdashery</p>
+      <p> 2021</p>
+    </div>
+
+    <p></p>
+    <p></p>
+
+    <img src="../image/logo/Logos layout-07.png" width="100%"></img>
+    <div class="twosplit">
+      <p> Twins*</p>
+      <p> 2021</p>
+    </div>
+
+    <p></p>
+    <p></p>
+
+    <img src="../image/logo/Logos layout-08.png" width="100%"></img>
+    <div class="twosplit">
+      <p> Lunar Films (Another Draft)</p>
+      <p> 2021</p>
+    </div>
+
+    <p></p>
+    <p></p>
+
+    <img src="../image/logo/Logos layout-09.png" width="100%"></img>
+    <div class="twosplit">
+      <p> Ermann & Ermann</p>
+      <p> 2021</p>
+    </div>
+
+    <p></p>
+    <p></p>
+
+    <img src="../image/logo/Logos layout-10.png" width="100%"></img>
+    <div class="twosplit">
+      <p> Ichiban</p>
+      <p> 2021</p>
     </div>
 
 
