--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
           </div></a>
           <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Window Clock </p>
-            <p id="new"></p>
+            <p></p>
             <p> 2020 </p>
           </div></a>
           <a href="javascript:void(0);" onclick="window.open('project/buildit.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Build-it Note </p>
-            <p id="new"></p>
+            <p></p>
             <p> 2020 </p>
           </div></a>
         </section>
@@ -128,7 +128,7 @@
           </div></a>
           <a href="javascript:void(0);" onclick="window.open('project/logo.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Logo </p>
-            <p></p>
+            <p id="updated"></p>
             <p> 2019 - Ongoing</p>
           </div></a>
 
