Added Lunar Day

--- a/memo.html
+++ b/memo.html
@@ -79,6 +79,25 @@
           <p> Memo</p>
 
           <div class="listSplit">
+            <p>Short Story: Lunar Day</p>
+            <p>Thursday</p>
+            <p>2021 09 02 - 2:00 PM</p>
+          </div>
+
+          <br>
+          <p> I originally wrote this short story in 2018 as Sample Text for a Typeface designed by a friend of Mine, each paragraph typeset in increasingly heavy weights. I still quite like it, so I'm putting it here.</p>
+          <p style="text-align:center;">...</p>
+          <p>This morning I woke up an inch above my bed. Disoriented and still shaking off the dust of sleep, I fumblingly turned on my bedside lamp, which itself was an inch midair above the table, the table’s feet suspended an inch above the floor. Around my room, every object was levitating yet perfectly still, as if suspended buoyant underwater.</p>
+          <p>Tentatively, I attempted to shift my weight over the side of the bed, the duvet floating up towards the ceiling as I unwrapped myself. The bed was heavy enough that I could grab onto it to get myself upright and carefully lower myself onto the floor. Scraping the carpet with my toes, I was able to clumsily propel myself to the window, opening the blind. The morning sky was filled by an expansive creamish terrain, pockmarked and riddled with divots and horns. Its surface seemed close enough to scrape the radio antennae on the roofs of neighbouring homes, filling the air with a pale otherworldly glow.</p>
+          <p>Breakfast was difficult. The water for my coffee refused to pour downwards, instead streaming upwards and dissipating into a scalding hot stratum of fog at about eye level, forcing me to hunch over to stop my glasses from clamming up. I cracked some eggs onto the frying pan, where they began to hover in slowly-spinning discs as they fried. The cheese in my fridge all seemed to be sticking magnetically to its ceiling, vibrating with a dull hum.</p>
+          <P>From the kitchen window I watched as pedestrians grappled unsuccessfully at lampposts to stop themselves from being pulled into the Lagrange point between the Earth and the Moon. Frogs flung through the air above the roofs, their jumps having propelled them at unexpected speeds and trajectories, each glassy-eyed face a picture of surprise as they rocketed into the atmosphere. Upside-down flying herons snapped each one up with zeal.</p>
+          <p>As the Moon loomed closer and closer, the atmosphere was saturated in an electric-tasting light so lush it seemed like a liquid. The entire contents of the nearby aquarium had floated free of the tanks, forming a silver cloud layer of jellyfish spooling their shiny tendrils, writhing black octopuses, and spider crabs snapping at algae, all punctuated by rod-like vertical eels and shoals of mercury-tinted garfish murmurating as they too were snapped up by the herons.</p>
+          <p>In a single moment, the golden light was suddenly subsumed by black as the Moon seemed to flip over itself to reveal its dark side, receding slowly into the inky sky. No longer projected by the magnetic pull of its gravity, the objects around the room softly descended onto their respective places.</p>
+          <p>The gradual ombre from the Moon’s gravity to the Earth’s slowly saturated me enough to make me aware of the weight of my limbs, the afterimage of the warm glow of lunar light still ringing in my head. Everything was now dipped in a deep soporific lacquer, filling ankle-deep around my feet and furniture as I waded back to my bedroom. The windows open, the liquescent essence of night had flooded back into the room, a bathypelagic dark casting a perfect anaesthetic negative of its volume. My body heavy as lead, I could barely stay awake as I lay on the mattress, the gentle hum of the house’s electricity lulling me once more into sleep.</p>
+          <p><br></p>
+
+
+          <div class="listSplit">
             <p>Sensing Magnetism</p>
             <p>Wednesday</p>
             <p>2021 06 09 - 6:00 PM</p>
