update instagram link

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
           <a href="directory.html"><li>Directory</li></a>
           <br>
-          <li id="external"><a href="https://instagram.com/www_wdwrd" target="blank" rel="noreferrer noopener">ig</a></li>
+          <li id="external"><a href="https://instagram.com/caleb_wdwrd" target="blank" rel="noreferrer noopener">ig</a></li>
           <li id="external"><a href="mailto:info@caleb-woodward.net">email</a></li>
 
         </ul>
