--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           </div></a>
           <a href="javascript:void(0);" onclick="window.open('project/logo.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Logo </p>
-            <p id="updated"></p>
+            <p></p>
             <p> 2019 - Ongoing</p>
           </div></a>
 
@@ -164,9 +164,15 @@
             <p>YEAR</p>
           </div>
 
+          <a href="javascript:void(0);" onclick="window.open('project/antenna.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p>Rooftop Antenna</p>
+            <p id="NEW"></p>
+            <p> 2021</p>
+          </div></a>
+
           <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p>Station-Searching  (MV)</p>
-            <p id="updated"></p>
+            <p></p>
             <p> 2021</p>
           </div></a>
 
