--- a/others.html
+++ b/others.html
@@ -83,6 +83,12 @@
             <p>YEAR</p>
           </div>
 
+          <a href="javascript:void(0);" onclick="window.open('project/antenna.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p>Rooftop Antenna</p>
+            <p id="NEW"></p>
+            <p> 2021</p>
+          </div></a>
+
           <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p>Station-Searching  (MV)</p>
             <p></p>
