update antenna wired link

--- a/project/antenna.html
+++ b/project/antenna.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="content">
-      <p>A Bi-weekly Radio Show for Goldsmiths' <a href="https://wiredradio.co.uk/"> Wired Radio</a> station, where I play a mix of electronic, ambient, experimental and whatever else.</p>
+      <p>A Bi-weekly Radio Show for Goldsmiths' <a href="https://wiredradio.co.uk/shows/caleb/"> Wired Radio</a> station, where I play a mix of electronic, ambient, experimental and whatever else.</p>
 
 
 
