--- a/directory.html
+++ b/directory.html
@@ -227,11 +227,13 @@
           <p> 2012 </p>
         </div></a>
 
-        <a href="https://www.discogs.com/Visible-Cloaks-Lex/master/1280029" target="blank"><div class="listSplit">
-          <p>Visible Cloaks - Lex</p>
-          <p id="info">AMBIENT, EXPERIMENTAL, ABSTRACT</p>
-          <p> 2017 </p>
+        <a href="https://www.discogs.com/release/379407-Lily-Chou-Chou-%E5%91%BC%E5%90%B8" target="blank"><div class="listSplit">
+          <p>Lily Chou-Chou - Breathe</p>
+          <p id="info">SOMBRE, POP, ROCK</p>
+          <p> 2012 </p>
         </div></a>
+
+
 
         <a href="https://www.discogs.com/Visible-Cloaks-Yoshio-Ojima-Satsuki-Shibano-Serenitatem/master/1528837" target="blank"><div class="listSplit">
           <p>Visible Cloaks, Yoshio Ojima & Satsuki Shibano ‎– Serenitatem</p>
@@ -256,6 +258,12 @@
             <p>A Wild Sheep Chase</p>
             <p>Haruki Murakami</p>
             <p> 2002 </p>
+          </div></a>
+
+          <a href="https://www.goodreads.com/book/show/10374.Hard_Boiled_Wonderland_and_the_End_of_the_World" target="blank"><div class="listSplit">
+            <p>Hard-Boiled Wonderland And The End Of The World</p>
+            <p>Haruki Murakami</p>
+            <p> 1991 </p>
           </div></a>
 
           <a href="https://www.goodreads.com/book/show/6759151-saturn-apartments-vol-1" target="blank"><div class="listSplit">
