- rearrange slightly directory - embed soundcloud to antenna page and add tracklists for first 2 episodes

--- a/project/antenna.html
+++ b/project/antenna.html
@@ -13,15 +13,49 @@
     <div class="content">
       <p>A Bi-weekly Radio Show for Goldsmiths' <a href="https://wiredradio.co.uk/shows/caleb/"> Wired Radio</a> station, where I play a mix of electronic, ambient, experimental and whatever else.</p>
 
+    
+    <img src="../image/antenna/cover for radio show-02.png" width="400px"></img>
+    <br>
+    <p>Episode 1 (2021 11 26)</p><br>
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1167467509&color=%23ececec&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
+    <br>
+    <p>Tracklist:<br><br>
 
-
+      Nobukazu Takemura — Overture<br>
+      Alvin Lucer — Music for piano with Magnetic Strings<br>
+      Yasunao Tone — Solo for Wounded CD part I<br>
+      Toshimaru Nakamura— Nimb number 43<br>
+      Oli XL - Imposter<br>
+      Hiroyuki Sugawara — Breathing Lake Hibara<br>
+      Ryuichi Sakamoto / Alva Noto — Pionier IOO<br>
+      Nobukazu Takemura — A Factory In The Night<br>
+      Sweet Trip — Dedicated<br>
+      Towa Tei — The End Of A Love Affair<br>
+      Nobukazu Takemura — Dancing Flow<br>
+      Bjork — Atlantic<br>
+      Miyu Hosoi — Lenna (HPL22 Ver.)<br>
+      Nobukazu Takemura — Finale</p>
     <br>
     <br>
-    <img src="../image/antenna/cover for radio show-02.png" width="550px"></img>
+    <p>Episode 2 (2021 12 03)</p><br>
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1171510534&color=%23ececec&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
     <br>
-    <p>Full episodes to be embedded to this page soon.</p>
-    <br>
-    <br>
+    <p>Tracklist:<br><br>
+      Hironori Natsugama - Utokad kropp<br>
+      Oli XL - Flower Circuit<br>
+      Nobukazu Takemura - Genrecombination<br>
+      Rei Harakami - Benjamin<br>
+      Reichi Chabo Nakaido - Hitori Bocchi 2<br>
+      CFCF - Blanketed in snow a Place Returned<br>
+      Oli XL - Cartoon Smile<br>
+      惑星のかぞえかた - 午前中の時間割 (Morning Schedule)<br>
+      Maiwai - Kakera<br>
+      Otomo Yoshide - Anode 2<br>
+      Visible Cloaks - Toi (Tokyo Mix)<br>
+      Caroline Foley - There Is Only The Truth<br>
+      Lily Chou-Chou - Erotic
+    </p>
+    <br><br><br>
     </div>
 
 
