--- a/garments.html
+++ b/garments.html
@@ -83,6 +83,12 @@
             <p>YEAR</p>
           </div>
 
+          <a href="javascript:void(0);"><div class="listSplit">
+            <p > Dog's Window </p>
+            <p id="wip"></p>
+            <p> 2021 </p>
+          </div></a>
+
           <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Comfort-Seeking Clothing</p>
             <p></p>
