add new img to station searching

--- a/project/station-searching.html
+++ b/project/station-searching.html
@@ -26,6 +26,8 @@
     <p></p>
     <img src="../image/station-searching/04.png" width=560px;></img>
     <p></p>
+    <img src="../image/station-searching/10.png" width=560px;></img>
+    <p></p>
     <img src="../image/station-searching/05.png" width=560px;></img>
     <p><br></p>
     <p> Character </p>
