--- a/garments.html
+++ b/garments.html
@@ -84,7 +84,7 @@
           </div>
 
           <a href="javascript:void(0);"><div class="listSplit">
-            <p > Dog's Window </p>
+            <p > Follow the Rabbit </p>
             <p id="wip"></p>
             <p> 2021 </p>
           </div></a>
