--- a/project/antenna.html
+++ b/project/antenna.html
@@ -13,7 +13,7 @@
     <div class="content">
       <p>A Bi-weekly Radio Show for Goldsmiths' <a href="https://wiredradio.co.uk/shows/caleb/"> Wired Radio</a> station, where I play a mix of electronic, ambient, experimental and whatever else.</p>
 
-    
+
     <img src="../image/antenna/cover for radio show-02.png" width="400px"></img>
     <br>
     <p>Episode 1 (2021 11 26)</p><br>
@@ -54,6 +54,27 @@
       Visible Cloaks - Toi (Tokyo Mix)<br>
       Caroline Foley - There Is Only The Truth<br>
       Lily Chou-Chou - Erotic
+    </p>
+    <br>
+    <br>
+    <p>Episode 3 (2021 12 17)</p><br>
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1179636889&color=%23ececec&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
+    <br>
+    <p>Originally aired with a special 20 min Premiere by <a href="https://soundcloud.com/yyedd">Yyed</a></p>
+    <p>Tracklist:<br><br>
+      Lily Chou-Chou - Arabesque<br>
+      Kassel Jaeger - Mantis<br>
+      RdL - Mn2<br>
+      Nuno Canavarro - Cave<br>
+      Smile Down Upon Us - A Vessel In The Fragrance<br>
+      Sawako - Rush<br>
+      Ryuichi Sakamoto - Plankton<br>
+      A Large Sheet Of Muscle - Costume N<br>
+      Michiru Aoyama - Seven Colours<br>
+      Masashi Hamauzu - Lenses Tour<br>
+      Pawn - Prepared Statement ( With Marihiko Hara )<br>
+      Ryuichi Sakamoto - War & Peace ( AOKI Takamasa remix )<br>
+      Nobukazu Takemura - Uruu<br>
     </p>
     <br><br><br>
     </div>
