create and link jewellery

--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@
             <p id="wip"></p>
             <p> 2021 </p>
           </div></a>
+
+          <a href="javascript:void(0);" onclick="window.open('project/jewellery.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p>Jewellery</p>
+            <p id="NEW"></p>
+            <p> 2021, 2022</p>
+          </div></a>
+
           <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Window Clock </p>
             <p></p>
@@ -145,6 +152,8 @@
             <p>YEAR</p>
           </div>
 
+
+
           <a href="javascript:void(0);"><div class="listSplit">
             <p > Follow the Rabbit </p>
             <p id="wip"></p>
@@ -169,6 +178,8 @@
             <p></p>
             <p>YEAR</p>
           </div>
+
+
 
           <a href="javascript:void(0);" onclick="window.open('project/antenna.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p>Rooftop Antenna</p>
