--- a/objects.html
+++ b/objects.html
@@ -91,14 +91,21 @@
             <p id="wip"></p>
             <p> 2021 </p>
           </div></a>
+
+          <a href="javascript:void(0);" onclick="window.open('project/jewellery.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p>Jewellery</p>
+            <p id="NEW"></p>
+            <p> 2021</p>
+          </div></a>
+          
           <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Window Clock </p>
-            <p id="new"></p>
+            <p></p>
             <p> 2020 </p>
           </div></a>
           <a href="javascript:void(0);" onclick="window.open('project/buildit.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Build-it Note </p>
-            <p id="new"></p>
+            <p></p>
             <p> 2020 </p>
           </div></a>
         </section>
