--- a/gallery.html
+++ b/gallery.html
@@ -81,7 +81,7 @@
         <p></p>
         <p></p>
         <p></p>
-
+        <a href="javascript:void(0);" onclick="window.open('project/jewellery.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/jewellery.png"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/antenna.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="image/antenna/cover for radio show-02.png"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/window.png"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/buildit.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/buildit.png"></img></a>
