--- a/directory.html
+++ b/directory.html
@@ -124,13 +124,19 @@
           <a href="http://swimmingdesign.com/" target="blank"><div class="listSplit">
             <p>swimmingdesign.com</p>
             <p id="info"> TOMOHIRO OKAZAKI (jp)</p>
-            <p> DESIGNER </p>
+            <p> DESIGNER / ANIMATOR</p>
           </div></a>
 
           <a href="https://www.kazushigemiyake.com/" target="blank"><div class="listSplit">
             <p>kazushigemiyake.com</p>
             <p id="info">KAZUHIGE MIYAKE (jp)</p>
             <p> DESIGNER </p>
+          </div></a>
+
+          <a href="https://www.michaellevinestudio.com/work" target="blank"><div class="listSplit">
+            <p>michaellevinestudio.com</p>
+            <p id="info">MICHAEL LEVINE</p>
+            <p> SET DESIGNER </p>
           </div></a>
 
           <a href="http://pluslorem.wiki/" target="blank"><div class="listSplit">
@@ -146,9 +152,6 @@
             <p id="info">ARTIST RISA SATO (jp)</p>
             <p> ARTIST </p>
           </div></a>
-
-
-
 
 
           <a href="https://web.archive.org/web/20200120133949/http://nekojiru.net/" target="blank"><div class="listSplit">
@@ -215,6 +218,24 @@
           <p> 2001 </p>
         </div></a>
 
+        <a href="https://www.discogs.com/release/379407-Lily-Chou-Chou-%E5%91%BC%E5%90%B8" target="blank"><div class="listSplit">
+          <p>Lily Chou-Chou - Breathe</p>
+          <p id="info">SOMBRE, POP, ROCK</p>
+          <p> 2001 </p>
+        </div></a>
+
+        <a href="https://www.discogs.com/release/997172-Masashi-Hamauzu-%E6%B5%9C%E6%B8%A6%E6%AD%A3%E5%BF%97-Vielen-Dank-%E3%83%95%E3%82%A3%E3%83%BC%E3%83%AC%E3%83%B3%E3%83%80%E3%83%B3%E3%82%AF" target="blank"><div class="listSplit">
+          <p>Masashi Hamauzu - Vielen Dank</p>
+          <p id="info">PIANO, CLASSICAL, NEO-ROMANTIC</p>
+          <p> 2007 </p>
+        </div></a>
+
+        <a href="https://www.discogs.com/master/826470-Nuito-Unutella" target="blank"><div class="listSplit">
+          <p>Nuito - Unutella</p>
+          <p id="info">MATH ROCK</p>
+          <p> 2008 </p>
+        </div></a>
+
         <a href="https://www.discogs.com/Yanokami-%E9%81%A0%E3%81%8F%E3%81%AF%E8%BF%91%E3%81%84/master/1128927" target="blank"><div class="listSplit">
           <p>Yanokami - 遠くは近い</p>
           <p id="info">ELECTRONIC, POP, SYNTH POP</p>
@@ -227,11 +248,7 @@
           <p> 2012 </p>
         </div></a>
 
-        <a href="https://www.discogs.com/release/379407-Lily-Chou-Chou-%E5%91%BC%E5%90%B8" target="blank"><div class="listSplit">
-          <p>Lily Chou-Chou - Breathe</p>
-          <p id="info">SOMBRE, POP, ROCK</p>
-          <p> 2012 </p>
-        </div></a>
+
 
 
 
