create and link Rabbit project

--- a/garments.html
+++ b/garments.html
@@ -83,9 +83,9 @@
             <p>YEAR</p>
           </div>
 
-          <a href="javascript:void(0);"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/rabbit.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Follow the Rabbit </p>
-            <p id="wip"></p>
+            <p id="new"></p>
             <p> 2021 </p>
           </div></a>
 
