add paper-like printer

--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
             <p>YEAR</p>
           </div>
           <a href="javascript:void(0);"><div class="listSplit">
+            <p > Paper-Like Printer</p>
+            <p id="wip"></p>
+            <p> 2022 </p>
+          </div></a>
+          <a href="javascript:void(0);"><div class="listSplit">
             <p > Window Radiometer </p>
             <p id="wip"></p>
             <p> 2021 </p>
