--- a/project/windowclock.html
+++ b/project/windowclock.html
@@ -11,17 +11,17 @@
     </div>
 
     <div class="content">
-      <p>Emerging from the idea of "A Window of Time", A Decorative clock expressing the passing of time as the angle of the sun's light projected through a window. At night, the moon comes into view through the window.</p>
 
-
+      <p>A simple "Clock" that represents the passing of time with an imaginary window. Over the course of the day, the angle of the sunlight projected through the window sweeps across the wall. As the sun sets, the sky seen through the window becomes a gradient of orange and pale pink. As night-time fades in, the Moon crosses the slice of sky seen through the window, turning it into a nightlight.</p>
+      <p>When thinking about time, our primary relationship with it is the day and night cycle - a clock or watch just slices it into hour-long sections and tracks the progress. I decided to create this clock based on the idea of representing sunlight directly. Maybe we can become slightly more aware of the physical connection between Time and Light.</p>
 
     <br>
     <br>
-    <img src="../image/windowclock/clock lineup day.png" width="550px"></img>
+    <img src="../image/windowclock/01.jpg" width="550px"></img>
     <p></p>
-    <img src="../image/windowclock/clock lineup night.png" width="550px"></img>
+    <img src="../image/windowclock/02.jpg" width="550px"></img>
     <p></p>
-    <img src="../image/windowclock/Clock night.png" width="550px"></img>
+    <img src="../image/windowclock/03.jpg" width="550px"></img>
 
     </div>
 
