--- a/project/windowclock.html
+++ b/project/windowclock.html
@@ -1,13 +1,13 @@
 <html>
 
   <link rel="stylesheet" href="../popout stylesheet.css">
-  <title> Window Clock </title>
+  <title> Window-Like Clock </title>
 </html>
 
 <body class="page">
   <div class="overall">
     <div class="header">
-    <p>Window Clock</p>
+    <p>Window-Like Clock</p>
     </div>
 
     <div class="content">
