--- a/objects.html
+++ b/objects.html
@@ -92,17 +92,19 @@
             <p> 2021 </p>
           </div></a>
 
+          <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p> Window-Like Clock </p>
+            <p id="updated"></p>
+            <p> 2022 </p>
+          </div></a>
+
           <a href="javascript:void(0);" onclick="window.open('project/jewellery.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p>Jewellery</p>
             <p id="NEW"></p>
             <p> 2021</p>
           </div></a>
-          
-          <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Window Clock </p>
-            <p></p>
-            <p> 2020 </p>
-          </div></a>
+
+
           <a href="javascript:void(0);" onclick="window.open('project/buildit.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Build-it Note </p>
             <p></p>
